tests/baselines/reference/parserMissingToken1.errors.txt
tests/cases/conformance/parser/ecmascript5/MissingTokens/parserMissingToken1.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/MissingTokens/parserMissingToken1.ts(1,5): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/MissingTokens/parserMissingToken1.ts(1,12): error TS1005: '{' expected.


==== tests/cases/conformance/parser/ecmascript5/MissingTokens/parserMissingToken1.ts (3 errors) ====
    a / finally
    ~
!!! error TS2304: Cannot find name 'a'.
        ~~~~~~~
!!! error TS1109: Expression expected.
               
!!! error TS1005: '{' expected.